# JWT

./: db.sqlite3  pyproject.toml
app/: schemas.py
auth/: utils.py
auth/certs/: jwt-private.pem  jwt-public.pem
core/: config.py
users/: schemas.py
