[tool.poetry]
name = "micro-shop"
version = "0.1.0"
description = ""
authors = ["Invalidsyntaxisbot <101515672+Sp1ker2@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi-myhelper = "^0.1.7"
fastapi = "^0.109.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = {extras = ["email"], version = "^2.6.1"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
pytest = "^8.0.1"
telebot = "^0.0.5"
alembic = "^1.13.1"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
